testar awesome bootstrap checkbox

--- a/public/app/caixas/views/create/create-caixa.client.view.html
+++ b/public/app/caixas/views/create/create-caixa.client.view.html
@@ -16,7 +16,7 @@
         <form data-ng-submit="create()">
             <div class="row">
 
-                <div class="col-sm-4">
+                <div class="col-lg-4">
                     <div class="ibox float-e-margins">
                         <div class="ibox-title">
                             <h5>Registrar Caixa</h5>
