--- a/public/app/caixas/views/edit/edit-caixa.client.view.html
+++ b/public/app/caixas/views/edit/edit-caixa.client.view.html
@@ -29,6 +29,13 @@
                     <ibox-conferencia-cartoes></ibox-conferencia-cartoes>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="form-group">
+                        <input type="submit" value="Update" class="btn btn-info pull-right">
+                    </div>
+                </div>
+            </div>
         </form>
     </div>
 </section>
