--- a/public/app/caixas/views/edit/_ibox-conferencia-cartoes.html
+++ b/public/app/caixas/views/edit/_ibox-conferencia-cartoes.html
@@ -20,7 +20,7 @@
                             <tbody>
                             <tr data-ng-repeat="card in caixa.saidas.cartoes | orderBy: 'checked'">
                                 <!--<td><input icheck type="checkbox" class="icheckbox_flat-blue" ng-model="card.checked"></td>-->
-                                <td><input type="checkbox" class="checkbox-circle" ng-model="card.checked"></td>
+                                <td><input icheck type="checkbox" class="icheckbox_flat-blue" ng-model="card.checked"></td>
                                 <td ng-class="card.checked ? 'text-strikethrough': ''" class="text-center"><i ng-class="defC.bandeiraIcon(card.bandeira)" class="text-center"></i></td>
                                 <td ng-class="card.checked ? 'text-strikethrough': ''">{{ card.valor | currency: 'R$ ' }}</td>
                                 <td ng-class="card.checked ? 'text-strikethrough': ''" class="text-center"><i ng-class="defC.turnoIcon(card.turno)" class="text-center"></i></td>
