novas alterações no layout de caixas_create

--- a/public/app/caixas/views/create/create-caixa.client.view.html
+++ b/public/app/caixas/views/create/create-caixa.client.view.html
@@ -115,6 +115,41 @@
                         </div>
                     </div>
                 </div> <!-- ibox Lançamentos Caixa -->
+                <div class="col-lg-6">
+                    <div class="tabs-container">
+
+                        <tabset>
+                            <tab>
+                                <tab-heading>
+                                    <i class="fa fa-cc-visa"></i>Cartões
+                                </tab-heading>
+                                <div class="panel-body">
+
+                                </div>
+                            </tab>
+                            <tab>
+                                <tab-heading>
+                                    <i class="fa fa-desktop"></i>Despesas
+                                </tab-heading>
+                                <div class="panel-body">
+                                    <strong>Donec quam felis</strong>
+
+
+                                </div>
+                            </tab>
+                            <tab>
+                                <tab-heading>
+                                    <i class="fa fa-database"></i>
+                                </tab-heading>
+                                <div class="panel-body">
+                                    <strong>Lorem ipsum dolor sit amet, consectetuer adipiscing</strong>
+
+                                </div>
+                            </tab>
+                        </tabset>
+
+                    </div>
+                </div>
 
                 <div class="col-lg-8">
                     <div class="ibox float-e-margins">
@@ -158,7 +193,7 @@
                                     <a style="margin-top: 6px; margin-left: 15px;" class="btn btn-sm btn-info" ng-click="addRegistro(objRegistro)" tabindex="19"><i class="fa fa-plus"></i></a>
                                 </div>
 
-                            </div>
+                            </div> <!-- Form Input Despesas e Movimentação -->
                         </div>
                     </div>
                 </div> <!-- ibox INPUTs ObjRegistro -->
